# doc2dataset

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
doc2dataset/: __init__.py  analytics.py  attribution.py  augmentation.py  checkpoint.py  cli.py  cost.py  dataset.py  extractors.py  formatters.py  huggingface.py  loaders.py  parallel.py  processor.py  quality.py
examples/: basic_usage.py  extraction_types.py
tests/: __init__.py  test_analytics.py  test_attribution.py  test_augmentation.py  test_checkpoint.py  test_cli.py  test_cost.py  test_dataset.py  test_extractors.py  test_formatters.py  test_huggingface.py  test_loaders.py  test_parallel.py  test_quality.py
